// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`McqQuestionAdditionalInfoComponent should show generator option message when "generateOptionsFor" is enabled 1`] = `
<tm-mcq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (single answer) question options:
  <div>
     The options for this question is automatically generated from the list of all students in this course.
  </div>
</tm-mcq-question-additional-info>
`;

exports[`McqQuestionAdditionalInfoComponent should show mcq options 1`] = `
<tm-mcq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (single answer) question options:
  <ul>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      3
    </li>
  </ul>
</tm-mcq-question-additional-info>
`;

exports[`McqQuestionAdditionalInfoComponent should show other when "other" option is enabled 1`] = `
<tm-mcq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (single answer) question options:
  <ul>
    <li>
      1
    </li>
    <li>
      2
    </li>
    <li>
      3
    </li>
    <li>
      Other
    </li>
  </ul>
</tm-mcq-question-additional-info>
`;

exports[`McqQuestionAdditionalInfoComponent should snap with default view 1`] = `
<tm-mcq-question-additional-info
  FeedbackParticipantType={[Function Object]}
  __ngContext__={[Function Number]}
  questionDetails={[Function Object]}
>
  Multiple-choice (single answer) question options:
  <ul>
  </ul>
</tm-mcq-question-additional-info>
`;
